++++
News
++++

.. contents:: Contents:
   :backlinks: none

.. _start:

SQLObject 0.12.1
================

* Fixed three bugs in PostgresConnection.

* A change ported from `SQLObject 0.11.3`_.

SQLObject 0.12.0
================

Released 20 Oct 2009.

Features & Interface
--------------------

* .selectBy(), .deleteBy() and .by*() methods pass all values through
  .from_python(), not only unicode.

* The user can choose a DB API driver for SQLite by using a "backend"
  parameter in DB URI or SQLiteConnection that can be a comma-separated
  list of backend names. Possible backends are: "pysqlite2" (alias
  "sqlite2"), "sqlite3", "sqlite" (alias "sqlite1"). Default is to test
  pysqlite2, sqlite3 and sqlite in that order.

* The user can choose a DB API driver for PostgreSQL by using a "backend"
  parameter in DB URI or PostgresConnection that can be a comma-separated
  list of backend names. Possible backends are: "psycopg2", "psycopg1",
  "psycopg" (tries psycopg2 and psycopg1), "pygresql". Default is
  "psycopg".
  WARNING: API change! PostgresConnection's parameter
  "usePygresql" is now replaced with "backend=pygresql".

* The user can choose a DB API driver for MSSQL by using a "backend"
  parameter in DB URI or MSSQLConnection that can be a comma-separated list
  of backend names. Possible backends are: "adodb" (alias "adodbapi") and
  "pymssql". Default is to test adodbapi and pymssql in that order.

* alternateMethodName is defined for all unique fields, not only alternateID;
  this makes SQLObject create .by*() methods for all unique fields.

* SET client_encoding for PostgreSQL to the value of "charset" parameter
  in DB URI or PostgresConnection.

* TimestampCol() can be instantiated without any defaults, in this case
  default will be None (good default for TIMESTAMP columns in MySQL).

Small Features
--------------

* Imported DB API drivers are stored as connection instance variables, not